syntax = "proto3";

package kotlinx.rpc.grpc.test.common;

message AllPrimitives {
  double double = 1;
  float float = 2;
  int32 int32 = 3;
  int64 int64 = 4;
  uint32 uint32 = 5;
  uint64 uint64 = 6;
  optional sint32 sint32 = 7;
  optional sint64 sint64 = 8;
  optional fixed32 fixed32 = 9;
  optional fixed64 fixed64 = 10;
  optional sfixed32 sfixed32 = 11;
  optional sfixed64 sfixed64 = 12;
  optional bool bool = 13;
  optional string string = 14;
  optional bytes bytes = 15;
}